; ModuleID = '/home/carl/AnghaBench/openwrt/package/kernel/hwmon-gsc/src/extr_gsc.c_show_label.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/kernel/hwmon-gsc/src/extr_gsc.c_show_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }
%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.sensor_device_attribute = type { i64 }

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@gsp_sensors = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @show_label to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show_label(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.sensor_device_attribute*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.device_attribute*, %struct.device_attribute** %5, align 8
  %9 = call %struct.sensor_device_attribute* @to_sensor_dev_attr(%struct.device_attribute* %8)
  store %struct.sensor_device_attribute* %9, %struct.sensor_device_attribute** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @gsp_sensors, align 8
  %12 = load %struct.sensor_device_attribute*, %struct.sensor_device_attribute** %7, align 8
  %13 = getelementptr inbounds %struct.sensor_device_attribute, %struct.sensor_device_attribute* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 %14
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = call i32 @sprintf(i8* %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %17)
  ret i32 %18
}

declare dso_local %struct.sensor_device_attribute* @to_sensor_dev_attr(%struct.device_attribute*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
